--- a/team-makr-webApp/src/styles.css
+++ b/team-makr-webApp/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/normalize.css/normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+:root {
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    --red: #E63946;
+    --lightgreen: #F1FAEE;
+    --lightblue:#A8DADC;
+    --blue: #457B9D;
+    --darkblue: #1D3557;
+}
